--- a/TransactionsTestApi/docker-compose.yml
+++ b/TransactionsTestApi/docker-compose.yml
@@ -3,9 +3,22 @@ version: '3.4'
 services:
   transactionstestapi:
     image: ${DOCKER_REGISTRY-}transactionstestapi
+    container_name: transactionstestapi
     build:
       context: .
       dockerfile: TransactionsTestApi/Dockerfile
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - ASPNETCORE_HTTP_PORTS=5000
+      - ASPNETCORE_HTTPS_PORTS=5001
+    ports:
+      - "5000:5000"
+      - "5001:5001"
+    volumes:
+      - ${APPDATA}/Microsoft/UserSecrets:/home/app/.microsoft/usersecrets:ro
+      - ${APPDATA}/ASP.NET/Https:/home/app/.aspnet/https:ro
+    depends_on:
+      - database
 
   database:
     image: postgres:latest
@@ -15,4 +28,4 @@ services:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres 
     ports:
-      - 5432:5432
+      - 5433:5432
